--- a/.github/workflows/test_flow.yml
+++ b/.github/workflows/test_flow.yml
@@ -25,7 +25,7 @@ jobs:
     - name: compile
       run: mix compile --warnings-as-errors
     - name: Check formatting
-      run: mix format --check-formatting
+      run: mix format --check-formatted
     - name: Run linting
       run: mix credo --strict
     - name: Run Tests
